--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-jingjingjing love wangwangwang
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<a href="Jd/index.html"></a>
+	
+</body>
+</html>
